--- a/index.html
+++ b/index.html
@@ -1,16 +1,50 @@
-<!DOCTYPE html>
-<html>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>replit</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
-</head>
+<!DOCTYPE html> <html lang="en"> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>Nucleooo</title> <!-- Bootstrap CSS for a cohesive and responsive layout --> <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" xintegrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> <!-- Link to the custom CSS file for Nucleooo's styling --> <link rel="stylesheet" href="style.css"> <!-- Google Fonts as per the styling guide --> <link rel="preconnect" href="https://fonts.googleapis.com"> <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Nanum+Brush+Script&display=swap" rel="stylesheet"> <!-- Font Awesome for icons --> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> </head> <body class="d-flex flex-column min-vh-100">
+<!-- Navigation Bar -->
+<nav class="navbar navbar-expand-lg sticky-top">
+    <div class="container-fluid">
+        <a class="navbar-brand d-flex align-items-center" href="index.html">
+            <!-- Correct logo URL -->
+            <img src="https://i.ibb.co/k6rx7q8Z/Nucleooo.png" alt="Nucleooo Logo" width="40" height="40" class="d-inline-block align-text-top me-2">
+            <span class="logo-text">Nucleooo</span>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <!-- The theme toggle button has been removed -->
+            </ul>
+        </div>
+    </div>
+</nav>
 
-<body>
-  Hello world
-  <script src="script.js"></script>
-</body>
+<!-- Main Content Container -->
+<div class="container my-5 text-center flex-grow-1 d-flex flex-column justify-content-center align-items-center">
+    <!-- Main Application Display Area -->
+    <main id="app-container" class="card shadow p-4" style="max-width: 800px; width: 100%;">
+        <h1 class="header-font display-4 mb-4" id="main-title">Welcome to Nucleooo!</h1>
 
-</html>
+        <!-- Homepage Screen -->
+        <div id="homepage-screen">
+            <h2 class="header-font display-5 mb-4">About Nucleooo</h2>
+            <p class="body-font lead mb-4">
+                Nucleooo is an educational web application designed to help students learn and test their knowledge in various subjects through interactive quizzes. Our goal is to provide a simple, effective, and engaging learning experience for all skill levels.
+            </p>
+            <p class="body-font lead mb-4">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            </p>
+            <a href="app.html" class="btn btn-custom btn-lg body-font">Start Quizzes</a>
+        </div>
+    </main>
+</div>
+
+<!-- Footer -->
+<footer class="text-center text-lg-start mt-auto">
+    <div class="text-center p-3" style="background-color: var(--color-tertiary);">
+        &copy; 2025 Nucleooo. All rights reserved. :)
+    </div>
+</footer>
+
+<!-- Bootstrap JS Bundle for interactive components -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" xintegrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
